# termgenie

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/: config.toml  termgenie.py
